CONFSRV-819 - Configured collectd for Confluence

--- a/ami/config/confluence-collectd.conf
+++ b/ami/config/confluence-collectd.conf
@@ -57,82 +57,472 @@ Timestamp true
 # to missing dependencies or because they have been deactivated explicitly.  #
 ##############################################################################
 
-LoadPlugin cpu
-LoadPlugin csv
-LoadPlugin interface
-LoadPlugin df
-LoadPlugin disk
-LoadPlugin processes
-LoadPlugin load
-LoadPlugin memory
-LoadPlugin swap
-LoadPlugin java
+# Use the aggregation plugin to aggregate specific statistics
 LoadPlugin aggregation
-
 <Plugin aggregation>
-<Aggregation>
-Plugin "cpu"
-Type "cpu"
+    <Aggregation>
+        Plugin "cpu"
+        Type "cpu"
 
-GroupBy "Host"
-GroupBy "TypeInstance"
+        GroupBy "Host"
+        GroupBy "TypeInstance"
 
-CalculateSum true
-CalculateAverage true
-</Aggregation>
+        CalculateSum true
+        CalculateAverage true
+    </Aggregation>
 </Plugin>
 
+# Collect CPU statistics
+LoadPlugin cpu
+
+# Write collected statistics in CSV format
+LoadPlugin csv
 <Plugin csv>
-DataDir "/var/lib/collectd/csv"
-StoreRates false
+    DataDir "/var/lib/collectd/csv"
+    StoreRates false
 </Plugin>
 
+# Collect partition usage statistics
+LoadPlugin df
 <Plugin df>
-Device "/dev/xvda1"
-MountPoint "/media/atl"
-IgnoreSelected false
-ReportByDevice false
-ReportReserved false
-ReportInodes false
-ValuesAbsolute true
-ValuesPercentage false
+    Device "/dev/xvda1"
+    MountPoint "/media/atl"
+    IgnoreSelected false
+    ReportByDevice false
+    ReportReserved false
+    ReportInodes false
+    ValuesAbsolute true
+    ValuesPercentage false
 </Plugin>
 
+# Collect disk IO statistics
+LoadPlugin disk
 <Plugin disk>
-Disk "/^[hs]d[a-f][0-9]?$/"
-IgnoreSelected false
+    Disk "/^[hs]d[a-f][0-9]?$/"
+    IgnoreSelected false
 </Plugin>
 
+# Collect network interface usage statistics
+LoadPlugin interface
 <Plugin interface>
-Interface "eth0"
-IgnoreSelected false
+    Interface "eth0"
+    IgnoreSelected false
 </Plugin>
 
-
+LoadPlugin processes
 <Plugin processes>
-Process "git"
+    Process "git"
 </Plugin>
 
+# Collect system load statistics
+LoadPlugin load
+
+# Collect memory utilization statistics
+LoadPlugin memory
+<Plugin>
+    # Don't use absolute as each AWS ec2 instance is different, use percentage instead to get a uniform view
+    ValuesAbsolute false
+    ValuesPercentage true
+</Plugin>
+
+LoadPlugin swap
 <Plugin "swap">
-ReportByDevice false
-ReportBytes true
+    ReportByDevice false
+    ReportBytes true
 </Plugin>
 
+LoadPlugin java
 <Plugin java>
-JVMArg "-verbose:jni"
-JVMArg "-Djava.class.path=/usr/share/collectd/java/collectd-api.jar:/usr/share/collectd/java/generic-jmx.jar"
+    JVMArg "-verbose:jni"
+    JVMArg "-Djava.class.path=/usr/share/collectd/java/collectd-api.jar:/usr/share/collectd/java/generic-jmx.jar"
 
-LoadPlugin "org.collectd.java.GenericJMX"
-<Plugin "GenericJMX">
+    LoadPlugin "org.collectd.java.GenericJMX"
+    <Plugin "GenericJMX">
 
-<Connection>
-Host "localhost"
-ServiceURL "service:jmx:rmi:///jndi/rmi://localhost:3333/jmxrmi"
+    # Confluence server JMX configuration
+    <MBean "com.atlassian.instrumentation.confluence/Confluence.Usage.AllContent">
+        ObjectName "com.atlassian.instrumentation.confluence:type=Counter,name=Confluence.Usage.AllContent"
+        InstancePrefix "com.atlassian.instrumentation.confluence/Confluence.Usage.AllContent"
 
-User "monitorRole"
+        <Value>
+            Type "gauge"
+            InstancePrefix "Confluence.Usage.AllContent"
+            Attribute "Confluence.Usage.AllContent"
+        </Value>
+    </MBean>
 
-</Connection>
-</Plugin>
+    <MBean "com.atlassian.instrumentation.confluence/Confluence.Usage.CurrentContent">
+        ObjectName "com.atlassian.instrumentation.confluence:type=Counter,name=Confluence.Usage.CurrentContent"
+        InstancePrefix "com.atlassian.instrumentation.confluence/Confluence.Usage.CurrentContent"
+
+        <Value>
+            Type "gauge"
+            InstancePrefix "Confluence.Usage.CurrentContent"
+            Attribute "Confluence.Usage.CurrentContent"
+        </Value>
+    </MBean>
+
+    <MBean "com.atlassian.instrumentation.confluence/Confluence.Usage.CurrentContent">
+        ObjectName "com.atlassian.instrumentation.confluence:type=Counter,name=Confluence.Usage.CurrentContent"
+        InstancePrefix "com.atlassian.instrumentation.confluence/Confluence.Usage.CurrentContent"
+
+        <Value>
+            Type "gauge"
+            InstancePrefix "Confluence.Usage.CurrentContent"
+            Attribute "Confluence.Usage.CurrentContent"
+        </Value>
+    </MBean>
+
+    <MBean "com.atlassian.instrumentation.confluence/Confluence.Usage.GlobalSpaces">
+        ObjectName "com.atlassian.instrumentation.confluence:type=Counter,name=Confluence.Usage.GlobalSpaces"
+        InstancePrefix "com.atlassian.instrumentation.confluence/Confluence.Usage.GlobalSpaces"
+
+        <Value>
+            Type "gauge"
+            InstancePrefix "Confluence.Usage.GlobalSpaces"
+            Attribute "Confluence.Usage.GlobalSpaces"
+        </Value>
+    </MBean>
+
+    <MBean "com.atlassian.instrumentation.confluence/Confluence.Usage.PersonalSpaces">
+        ObjectName "com.atlassian.instrumentation.confluence:type=Counter,name=Confluence.Usage.PersonalSpaces"
+        InstancePrefix "com.atlassian.instrumentation.confluence/Confluence.Usage.PersonalSpaces"
+
+        <Value>
+            Type "gauge"
+            InstancePrefix "Confluence.Usage.PersonalSpaces"
+            Attribute "Confluence.Usage.PersonalSpaces"
+        </Value>
+    </MBean>
+
+    <MBean "com.atlassian.instrumentation.confluence/Confluence.Usage.TotalSpace">
+        ObjectName "com.atlassian.instrumentation.confluence:type=Counter,name=Confluence.Usage.TotalSpace"
+        InstancePrefix "com.atlassian.instrumentation.confluence/Confluence.Usage.TotalSpace"
+
+        <Value>
+            Type "gauge"
+            InstancePrefix "Confluence.Usage.TotalSpace"
+            Attribute "Confluence.Usage.TotalSpace"
+        </Value>
+    </MBean>
+
+    <MBean "com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast">
+        ObjectName "com.hazelcast:instance=hazelcast,name=operationServicehazelcast,type=HazelcastInstance.OperationService"
+        InstancePrefix "com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast"
+
+        # fqname = com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast#executedOperationCount
+        <Value>
+            Type "derive"
+            InstancePrefix "executedOperationCount"
+            Attribute "executedOperationCount"
+        </Value>
+
+        # fqname = com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast#executedRemoteOperationCount
+        <Value>
+            Type "derive"
+            InstancePrefix "executedRemoteOperationCount"
+            Attribute "executedRemoteOperationCount"
+        </Value>
+
+        # fqname = com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast#operationThreadCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "operationThreadCount"
+            Attribute "operationThreadCount"
+        </Value>
+
+        # fqname = com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast#remoteOperationCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "remoteOperationCount"
+            Attribute "remoteOperationCount"
+        </Value>
+
+        # fqname = com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast#responseQueueSize
+        <Value>
+            Type "gauge"
+            InstancePrefix "responseQueueSize"
+            Attribute "responseQueueSize"
+        </Value>
+
+        # fqname = com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast#runningOperationsCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "runningOperationsCount"
+
+            Attribute "runningOperationsCount"
+        </Value>
+    </MBean>
+
+    <MBean "com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast">
+        ObjectName "com.hazelcast:instance=hazelcast,name=hazelcast,type=HazelcastInstance.EventService"
+        InstancePrefix "com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast"
+
+        # fqname = com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast#eventThreadCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "eventThreadCount"
+            Attribute "eventThreadCount"
+        </Value>
+
+        # fqname = com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast#eventQueueCapacity
+        <Value>
+            Type "gauge"
+            InstancePrefix "eventQueueCapacity"
+            Attribute "eventQueueCapacity"
+        </Value>
+
+        # fqname = com.hazelcast/HazelcastInstance.EventService.hazelcast.hazelcast#eventQueueSize
+        <Value>
+            Type "gauge"
+            InstancePrefix "eventQueueSize"
+            Attribute "eventQueueSize"
+        </Value>
+    </MBean>
+
+    <MBean "com.atlassian.confluence/HibernateStatistics">
+                ObjectName "Confluence:name=HibernateStatistics"
+                InstancePrefix "com.atlassian.confluence/HibernateStatistics"
+        # fqname = org.hibernate.core/#CloseStatementCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "CloseStatementCount"
+            Attribute "CloseStatementCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#CollectionFetchCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "CollectionFetchCount"
+            Attribute "CollectionFetchCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#CollectionLoadCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "CollectionLoadCount"
+            Attribute "CollectionLoadCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#CollectionRecreateCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "CollectionRecreateCount"
+            Attribute "CollectionRecreateCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#CollectionRemoveCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "CollectionRemoveCount"
+            Attribute "CollectionRemoveCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#CollectionUpdateCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "CollectionUpdateCount"
+            Attribute "CollectionUpdateCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#ConnectCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "ConnectCount"
+            Attribute "ConnectCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#EntityDeleteCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "EntityDeleteCount"
+            Attribute "EntityDeleteCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#EntityFetchCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "EntityFetchCount"
+            Attribute "EntityFetchCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#EntityInsertCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "EntityInsertCount"
+            Attribute "EntityInsertCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#EntityLoadCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "EntityLoadCount"
+            Attribute "EntityLoadCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#EntityUpdateCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "EntityUpdateCount"
+            Attribute "EntityUpdateCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#FlushCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "FlushCount"
+            Attribute "FlushCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#NaturalIdCacheHitCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "NaturalIdCacheHitCount"
+            Attribute "NaturalIdCacheHitCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#NaturalIdCacheMissCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "NaturalIdCacheMissCount"
+            Attribute "NaturalIdCacheMissCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#NaturalIdCachePutCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "NaturalIdCachePutCount"
+            Attribute "NaturalIdCachePutCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#NaturalIdQueryExecutionCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "NaturalIdQueryExecutionCount"
+            Attribute "NaturalIdQueryExecutionCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#NaturalIdQueryExecutionMaxTime
+        <Value>
+            Type "gauge"
+            InstancePrefix "NaturalIdQueryExecutionMaxTime"
+            Attribute "NaturalIdQueryExecutionMaxTime"
+        </Value>
+
+        # fqname = org.hibernate.core/#OptimisticFailureCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "OptimisticFailureCount"
+            Attribute "OptimisticFailureCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#PrepareStatementCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "PrepareStatementCount"
+            Attribute "PrepareStatementCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#QueryCacheHitCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "QueryCacheHitCount"
+            Attribute "QueryCacheHitCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#QueryCacheMissCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "QueryCacheMissCount"
+            Attribute "QueryCacheMissCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#QueryCachePutCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "QueryCachePutCount"
+            Attribute "QueryCachePutCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#QueryExecutionCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "QueryExecutionCount"
+            Attribute "QueryExecutionCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#QueryExecutionMaxTime
+        <Value>
+            Type "gauge"
+            InstancePrefix "QueryExecutionMaxTime"
+            Attribute "QueryExecutionMaxTime"
+        </Value>
+
+        # fqname = org.hibernate.core/#SecondLevelCacheHitCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "SecondLevelCacheHitCount"
+            Attribute "SecondLevelCacheHitCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#SecondLevelCacheMissCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "SecondLevelCacheMissCount"
+            Attribute "SecondLevelCacheMissCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#SecondLevelCachePutCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "SecondLevelCachePutCount"
+            Attribute "SecondLevelCachePutCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#SessionCloseCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "SessionCloseCount"
+            Attribute "SessionCloseCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#TransactionCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "TransactionCount"
+            Attribute "TransactionCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#UpdateTimestampsCacheHitCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "UpdateTimestampsCacheHitCount"
+            Attribute "UpdateTimestampsCacheHitCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#UpdateTimestampsCacheMissCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "UpdateTimestampsCacheMissCount"
+            Attribute "UpdateTimestampsCacheMissCount"
+        </Value>
+
+        # fqname = org.hibernate.core/#UpdateTimestampsCachePutCount
+        <Value>
+            Type "gauge"
+            InstancePrefix "UpdateTimestampsCachePutCount"
+            Attribute "UpdateTimestampsCachePutCount"
+        </Value>
+    </MBean>
+
+    <Connection>
+        Host "localhost"
+        ServiceURL "service:jmx:rmi:///jndi/rmi://localhost:3333/jmxrmi"
+
+        User "monitorRole"
+
+    </Connection>
+    </Plugin>
 
 </Plugin>
 
