--- a/ami/config/confluence-collectd.conf
+++ b/ami/config/confluence-collectd.conf
@@ -206,6 +206,7 @@ LoadPlugin java
         </Value>
     </MBean>
 
+    # Hazelcast statistic JMX configuration
     <MBean "com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast">
         ObjectName "com.hazelcast:instance=hazelcast,name=operationServicehazelcast,type=HazelcastInstance.OperationService"
         InstancePrefix "com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast"
@@ -280,6 +281,7 @@ LoadPlugin java
         </Value>
     </MBean>
 
+    # Hibernate statistics JMX configuration
     <MBean "com.atlassian.confluence/HibernateStatistics">
                 ObjectName "Confluence:name=HibernateStatistics"
                 InstancePrefix "com.atlassian.confluence/HibernateStatistics"
@@ -512,6 +514,206 @@ LoadPlugin java
             Type "gauge"
             InstancePrefix "UpdateTimestampsCachePutCount"
             Attribute "UpdateTimestampsCachePutCount"
+        </Value>
+    </MBean>
+
+    # Apache Tomcat JMX configuration
+    <MBean "catalina/global_request_processor">
+        ObjectName "Catalina:type=GlobalRequestProcessor,*"
+        InstancePrefix "catalina_request_processor-"
+        InstanceFrom "name"
+
+        <Value>
+            Type "io_octets"
+            InstancePrefix "global"
+            #InstanceFrom ""
+            Table false
+            Attribute "bytesReceived"
+            Attribute "bytesSent"
+        </Value>
+
+        <Value>
+            Type "total_requests"
+            InstancePrefix "global"
+            #InstanceFrom ""
+            Table false
+            Attribute "requestCount"
+        </Value>
+
+        <Value>
+            Type "total_time_in_ms"
+            InstancePrefix "global-processing"
+            #InstanceFrom ""
+            Table false
+            Attribute "processingTime"
+        </Value>
+    </MBean>
+
+    <MBean "catalina/detailed_request_processor">
+        ObjectName "Catalina:type=RequestProcessor,*"
+        InstancePrefix "catalina_request_processor-"
+        InstanceFrom "worker"
+
+        <Value>
+            Type "io_octets"
+            #InstancePrefix ""
+            InstanceFrom "name"
+            Table false
+            Attribute "bytesReceived"
+            Attribute "bytesSent"
+        </Value>
+
+        <Value>
+            Type "total_requests"
+            #InstancePrefix ""
+            InstanceFrom "name"
+            Table false
+            Attribute "requestCount"
+        </Value>
+
+        <Value>
+            Type "total_time_in_ms"
+            InstancePrefix "processing-"
+            InstanceFrom "name"
+            Table false
+            Attribute "processingTime"
+        </Value>
+    </MBean>
+
+    <MBean "catalina/thread_pool">
+        ObjectName "Catalina:type=ThreadPool,*"
+        InstancePrefix "request_processor-"
+        InstanceFrom "name"
+
+        <Value>
+            Type "threads"
+            InstancePrefix "total"
+            #InstanceFrom ""
+            Table false
+            Attribute "currentThreadCount"
+        </Value>
+
+        <Value>
+            Type "threads"
+            InstancePrefix "running"
+            #InstanceFrom ""
+            Table false
+            Attribute "currentThreadsBusy"
+        </Value>
+    </MBean>
+
+    # General JVM configuration
+    <MBean "memory">
+        ObjectName "java.lang:type=Memory,*"
+        InstancePrefix "java_memory"
+        #InstanceFrom "name"
+
+        <Value>
+            Type "memory"
+            InstancePrefix "heap-"
+            #InstanceFrom ""
+            Table true
+            Attribute "HeapMemoryUsage"
+        </Value>
+
+        <Value>
+            Type "memory"
+            InstancePrefix "nonheap-"
+            #InstanceFrom ""
+            Table true
+            Attribute "NonHeapMemoryUsage"
+        </Value>
+    </MBean>
+
+    <MBean "memory_pool">
+        ObjectName "java.lang:type=MemoryPool,*"
+        InstancePrefix "java_memory_pool-"
+        InstanceFrom "name"
+
+        <Value>
+            Type "memory"
+            #InstancePrefix ""
+            #InstanceFrom ""
+            Table true
+            Attribute "Usage"
+        </Value>
+    </MBean>
+
+    <MBean "classes">
+        ObjectName "java.lang:type=ClassLoading"
+        InstancePrefix "java"
+        #InstanceFrom ""
+
+        <Value>
+            Type "gauge"
+            InstancePrefix "loaded_classes"
+            #InstanceFrom ""
+            Table false
+            Attribute "LoadedClassCount"
+        </Value>
+    </MBean>
+
+    <MBean "compilation">
+        ObjectName "java.lang:type=Compilation"
+        InstancePrefix "java"
+        #InstanceFrom ""
+
+        <Value>
+            Type "total_time_in_ms"
+            InstancePrefix "compilation_time"
+            #InstanceFrom ""
+            Table false
+            Attribute "TotalCompilationTime"
+        </Value>
+    </MBean>
+
+    <MBean "garbage_collector">
+        ObjectName "java.lang:type=GarbageCollector,*"
+        InstancePrefix "java_gc-"
+        InstanceFrom "name"
+
+        <Value>
+            Type "invocations"
+            #InstancePrefix ""
+            #InstanceFrom ""
+            Table false
+            Attribute "CollectionCount"
+        </Value>
+
+        <Value>
+            Type "total_time_in_ms"
+            InstancePrefix "collection_time"
+            #InstanceFrom ""
+            Table false
+            Attribute "CollectionTime"
+        </Value>
+    </MBean>
+
+    <MBean "jvm_localhost_os">
+        ObjectName "java.lang:type=OperatingSystem"
+
+        # Open file descriptors
+        <Value>
+            Type "gauge"
+            InstancePrefix "os-open_fd_count"
+            Table false
+            Attribute "OpenFileDescriptorCount"
+        </Value>
+
+        # Max. allowed handles for user under which the JavaVM is running
+        <Value>
+            Type "gauge"
+            InstancePrefix "os-max_fd_count"
+            Table false
+            Attribute "MaxFileDescriptorCount"
+        </Value>
+
+        # Process time used by the JavaVM
+        <Value>
+            Type "counter"
+            InstancePrefix "os-process_cpu_time"
+            Table false
+            Attribute "ProcessCpuTime"
         </Value>
     </MBean>
 
