CONFSRV-819 - add collectd config for connection pool

--- a/ami/config/confluence-collectd.conf
+++ b/ami/config/confluence-collectd.conf
@@ -517,6 +517,40 @@ LoadPlugin java
         </Value>
     </MBean>
 
+    # C3P0 Connection pool JMX Configuration
+    <MBean "com.mchange.v2.c3p0/PooledDataSource">
+        ObjectName "com.mchange.v2.c3p0:type=PooledDataSource,identityToken=z8kflt9mg7kdgx1mg24gk|73b8c0cc,name=z8kflt9mg7kdgx1mg24gk|73b8c0cc"
+        InstancePrefix "com.mchange.v2.c3p0/PooledDataSource"
+
+        # fqname = com.mchange.v2.c3p0/PooledDataSource#numBusyConnections
+        <Value>
+            Type "gauge"
+            InstancePrefix "numBusyConnections"
+            Attribute "numBusyConnections"
+        </Value>
+
+        # fqname = com.mchange.v2.c3p0/PooledDataSource#numIdleConnections
+        <Value>
+            Type "gauge"
+            InstancePrefix "numIdleConnections"
+            Attribute "numIdleConnections"
+        </Value>
+
+        # fqname = com.mchange.v2.c3p0/PooledDataSource#threadPoolNumIdleThreads
+        <Value>
+            Type "gauge"
+            InstancePrefix "threadPoolNumIdleThreads"
+            Attribute "threadPoolNumIdleThreads"
+        </Value>
+
+        # fqname = com.mchange.v2.c3p0/PooledDataSource#numConnections
+        <Value>
+            Type "gauge"
+            InstancePrefix "numConnections"
+            Attribute "numConnections"
+        </Value>
+    </MBean>
+
     # Apache Tomcat JMX configuration
     <MBean "catalina/global_request_processor">
         ObjectName "Catalina:type=GlobalRequestProcessor,*"
