CONFSRV-819 - add collectd config to actually collect metrics

--- a/ami/config/confluence-collectd.conf
+++ b/ami/config/confluence-collectd.conf
@@ -162,17 +162,6 @@ LoadPlugin java
         </Value>
     </MBean>
 
-    <MBean "com.atlassian.instrumentation.confluence/Confluence.Usage.CurrentContent">
-        ObjectName "com.atlassian.instrumentation.confluence:type=Counter,name=Confluence.Usage.CurrentContent"
-        InstancePrefix "com.atlassian.instrumentation.confluence/Confluence.Usage.CurrentContent"
-
-        <Value>
-            Type "gauge"
-            InstancePrefix "Confluence.Usage.CurrentContent"
-            Attribute "Confluence.Usage.CurrentContent"
-        </Value>
-    </MBean>
-
     <MBean "com.atlassian.instrumentation.confluence/Confluence.Usage.GlobalSpaces">
         ObjectName "com.atlassian.instrumentation.confluence:type=Counter,name=Confluence.Usage.GlobalSpaces"
         InstancePrefix "com.atlassian.instrumentation.confluence/Confluence.Usage.GlobalSpaces"
@@ -757,6 +746,34 @@ LoadPlugin java
 
         User "monitorRole"
 
+        # Confluence
+        Collect "com.atlassian.instrumentation.confluence/Confluence.Usage.AllContent"
+        Collect "com.atlassian.instrumentation.confluence/Confluence.Usage.CurrentContent"
+        Collect "com.atlassian.instrumentation.confluence/Confluence.Usage.GlobalSpaces"
+        Collect "com.atlassian.instrumentation.confluence/Confluence.Usage.PersonalSpaces"
+        Collect "com.atlassian.instrumentation.confluence/Confluence.Usage.TotalSpace"
+
+        # Hazelcast
+        Collect "com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast"
+
+        # Hibernate
+        Collect "com.atlassian.confluence/HibernateStatistics"
+
+        # C3P0
+        Collect "com.mchange.v2.c3p0/PooledDataSource"
+
+        # Tomcat
+        Collect "catalina/global_request_processor"
+        Collect "catalina/detailed_request_processor"
+        Collect "catalina/thread_pool"
+
+        # JVM
+        Collect "memory"
+        Collect "memory_pool"
+        Collect "classes"
+        Collect "compilation"
+        Collect "garbage_collector"
+        Collect "jvm_localhost_os"
     </Connection>
     </Plugin>
 
