CONFSRV-819 - using wildchar for PooledDataSource

--- a/ami/config/confluence-collectd.conf
+++ b/ami/config/confluence-collectd.conf
@@ -508,7 +508,7 @@ LoadPlugin java
 
     # C3P0 Connection pool JMX Configuration
     <MBean "com.mchange.v2.c3p0/PooledDataSource">
-        ObjectName "com.mchange.v2.c3p0:type=PooledDataSource,identityToken=z8kflt9mg7kdgx1mg24gk|73b8c0cc,name=z8kflt9mg7kdgx1mg24gk|73b8c0cc"
+        ObjectName "com.mchange.v2.c3p0:type=PooledDataSource,*"
         InstancePrefix "com.mchange.v2.c3p0/PooledDataSource"
 
         # fqname = com.mchange.v2.c3p0/PooledDataSource#numBusyConnections
