CONFSRV-955 - prevert change on cloudformation template, update latest Confluence version on test Cloudformation

--- a/templates/ConfluenceDataCenter.template
+++ b/templates/ConfluenceDataCenter.template
@@ -444,13 +444,6 @@ Resources:
                   collectd-generic-jmx: []
               - !Ref "AWS::NoValue"
           files:
-            # Need to help Collectd which jvm to use
-            /etc/ld.so.conf.d/confluence.conf:
-              content:
-                !Join
-                  - "\n"
-                  -
-                    - /usr/lib/jvm/java-1.7.0-openjdk-1.7.0.131.x86_64/jre/lib/amd64/server/
             /etc/atl:
               content:
                 !Join
@@ -662,13 +655,6 @@ Resources:
                   collectd-rrdtool: []
               - Ref "AWS::NoValue"
           files:
-            # Need to help Collectd which jvm to use
-            /etc/ld.so.conf.d/confluence.conf:
-              content:
-                !Join
-                  - "\n"
-                  -
-                    - /usr/lib/jvm/java-1.7.0-openjdk-1.7.0.131.x86_64/jre/lib/amd64/server/
             /etc/atl:
               content:
                 !Join
@@ -1014,7 +1000,7 @@ Outputs:
     Description: The name of the auto scaling group of Synchrony cluster nodes
     Value: !Ref SynchronyClusterNodeGroup
   URL:
-    Description: The URL of the Bitbucket Data Center instance
+    Description: The URL of the Confluence Data Center instance
     Value: !Sub
       - "${HTTP}://${LoadBalancerDNSName}"
       - HTTP: !If [DoSSL, "https", "http"]
