CONFSRV-975 - added collectd config for LocalUser and LocalGroup

--- a/ami/config/confluence-collectd.conf
+++ b/ami/config/confluence-collectd.conf
@@ -195,6 +195,28 @@ LoadPlugin java
             </Value>
         </MBean>
 
+        <MBean "confluence/Confluence.Usage.LocalUsers">
+            ObjectName "com.atlassian.instrumentation.confluence:type=Counter,name=Confluence.Usage.LocalUsers"
+            InstancePrefix "confluence/Confluence.Usage.LocalUsers"
+
+            <Value>
+                Type "gauge"
+                InstancePrefix "Confluence.Usage.LocalUsers"
+                Attribute "Value"
+            </Value>
+        </MBean>
+
+        <MBean "confluence/Confluence.Usage.LocalGroups">
+            ObjectName "com.atlassian.instrumentation.confluence:type=Counter,name=Confluence.Usage.LocalGroups"
+            InstancePrefix "confluence/Confluence.Usage.LocalGroups"
+
+            <Value>
+                Type "gauge"
+                InstancePrefix "Confluence.Usage.LocalGroups"
+                Attribute "Value"
+            </Value>
+        </MBean>
+
         # Hazelcast statistic JMX configuration
         <MBean "com.hazelcast/HazelcastInstance.OperationService.hazelcast.operationServicehazelcast">
             ObjectName "com.hazelcast:instance=confluence,name=operationServiceconfluence,type=HazelcastInstance.OperationService"
