CONFSRV-955 - install collectd-rrdtool for Confluence node

--- a/templates/ConfluenceDataCenter.template
+++ b/templates/ConfluenceDataCenter.template
@@ -443,6 +443,7 @@ Resources:
                   collectd: []
                   collectd-java: []
                   collectd-generic-jmx: []
+                  collectd-rrdtool: []
               - !Ref "AWS::NoValue"
           files:
             /etc/atl:
