CONFSRV-955 - update from Rachel's comments

--- a/templates/ConfluenceDataCenter.template
+++ b/templates/ConfluenceDataCenter.template
@@ -34,7 +34,7 @@ Metadata:
       SynchronyNodeInstanceType:
         default: Confluence cluster node instance type
       CidrBlock:
-        default: 0.0.0.0/0
+        default: Permitted IP range
       ClusterNodeMax:
         default: Maximum number of cluster nodes
       ClusterNodeMin:
@@ -53,6 +53,8 @@ Metadata:
         default: Database storage type
       DBIops:
         default: RDS Provisioned IOPS
+      DBMultiAZ:
+        default: Enable RDS Multi-AZ deployment
       DBSnapshotId:
         default: Database snapshot ID to restore
       ConfluenceVersion:
@@ -79,7 +81,6 @@ Parameters:
   CidrBlock:
     AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
     ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
-    Default: 0.0.0.0/0
     Description: The CIDR IP range that is permitted to access the Bitbucket URL. Use 0.0.0.0/0 if you want public access from the internet.
     Type: String
     MinLength: 9
@@ -113,10 +114,11 @@ Parameters:
       - x1.32xlarge
     ConstraintDescription: "Must be an EC2 instance type in the C3, I2, R3, or X1 family, 'xlarge' or larger"
     Default: c3.xlarge
-    Description: Instance type for the cluster nodes.
+    Description: Confluence cluster node instance type.
     Type: String
   SynchronyNodeInstanceType:
     AllowedValues:
+      - c3.large
       - c3.xlarge
       - c3.2xlarge
       - c3.4xlarge
@@ -131,8 +133,8 @@ Parameters:
       - r3.8xlarge
       - x1.32xlarge
     ConstraintDescription: "Must be an EC2 instance type in the C3, I2, R3, or X1 family, 'xlarge' or larger"
-    Default: c3.xlarge
-    Description: Instance type for the Synchrony nodes.
+    Default: c3.large
+    Description: Synchrony cluster node instance type.
     Type: String
   CatalinaOpts:
     Description: Java options passed to the JVM that runs Confluence.
@@ -230,7 +232,7 @@ Parameters:
       - true
       - false
     ConstraintDescription: Must be 'true' or 'false'.
-    Description: Should the collectd service be started
+    Description: Start the collectd service
     Default: true
     Type: String
   ExternalSubnets:
