--- a/templates/ConfluenceDataCenter.template
+++ b/templates/ConfluenceDataCenter.template
@@ -990,9 +990,9 @@ Resources:
       ToPort: -1
       SourceSecurityGroupId: !Ref SecurityGroup
 Outputs:
-  ALBName:
+  ConfluenceTargetGroupARN:
     Description: The name of the load balancer of Confluence cluster nodes
-    Value: !GetAtt LoadBalancer.LoadBalancerName
+    Value: !Ref MainTargetGroup
   ClusterNodeGroup:
     Description: The name of the auto scaling group of Confluence cluster nodes
     Value: !Ref ClusterNodeGroup
