CONFSRVDEV-1527 - fixed collect config file

--- a/ami/config/confluence-collectd.conf
+++ b/ami/config/confluence-collectd.conf
@@ -109,17 +109,12 @@ LoadPlugin interface
     IgnoreSelected false
 </Plugin>
 
-LoadPlugin processes
-<Plugin processes>
-    Process "git"
-</Plugin>
-
 # Collect system load statistics
 LoadPlugin load
 
 # Collect memory utilization statistics
 LoadPlugin memory
-<Plugin>
+<Plugin memory>
     # Don't use absolute as each AWS ec2 instance is different, use percentage instead to get a uniform view
     ValuesAbsolute false
     ValuesPercentage true
