--- a/templates/JiraDataCenter.template
+++ b/templates/JiraDataCenter.template
@@ -46,6 +46,7 @@
             "InternalSubnets",
             "AssociatePublicIpAddress",
             "KeyName",
+            "CustomDnsName",
             "SSLCertificateName"
           ]
         },
@@ -243,6 +244,10 @@
       "Type": "AWS::EC2::KeyPair::KeyName",
       "ConstraintDescription": "Must be the name of an existing EC2 Key Pair."
     },
+    "CustomDnsName": {
+      "Description": "Custom DNS name which will be used to access Jira (optional)",
+      "Type": "String"
+    },
     "SSLCertificateName": {
       "Description": "The name of your Server Certificate to use for HTTPS.  Leave blank if you don't want to set up HTTPS at this time",
       "Type": "String",
@@ -299,6 +304,18 @@
           "Fn::Equals": [
             {
               "Ref": "DBMasterUserPassword"
+            },
+            ""
+          ]
+        }
+      ]
+    },
+    "UseCustomDnsName": {
+      "Fn::Not": [
+        {
+          "Fn::Equals" : [
+            {
+              "Ref": "CustomDnsName"
             },
             ""
           ]
@@ -633,9 +650,17 @@
                       "ATL_POSTGRES_ENABLED=false\n",
                       "ATL_PROXY_NAME=",
                       {
-                        "Fn::GetAtt": [
-                          "LoadBalancer",
-                          "DNSName"
+                        "Fn::If": [
+                          "UseCustomDnsName",
+                          {
+                            "Ref": "CustomDnsName"
+                          },
+                          {
+                            "Fn::GetAtt": [
+                              "LoadBalancer",
+                              "DNSName"
+                            ]
+                          }
                         ]
                       },
                       "\n",
@@ -1121,9 +1146,17 @@
             },
             "://",
             {
-              "Fn::GetAtt": [
-                "LoadBalancer",
-                "DNSName"
+              "Fn::If": [
+                "UseCustomDnsName",
+                {
+                  "Ref": "CustomDnsName"
+                },
+                {
+                  "Fn::GetAtt": [
+                    "LoadBalancer",
+                    "DNSName"
+                  ]
+                }
               ]
             }
           ]
